--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ a {
   text-decoration: none !important;
 }
 
+.centered {
+  text-align: center;
+}
+
 .nav-container {
   background: #0A2012;
   height: auto;
@@ -45,4 +49,30 @@ a {
   position: absolute;
   right: 0;
   bottom: 0;
+}
+
+#about {
+  display: table;
+  height: 410px;
+  overflow: hidden;
+  padding: 40px;
+}
+
+#about-text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.form-div {
+  background-image: url("images/large-header.jpg");
+  height: 410px;
+}
+
+.dark-overlay {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.25;
 }
