--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ a {
   background: #0A2012;
   height: auto;
   padding: 10px;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .header-text {
@@ -39,13 +43,17 @@ a {
   margin-top: -15px;
 }
 
-#top-image {
+#top-content {
+  padding-top: 76px;
+}
+
+.top-image {
   width: 100%;
   height: 410px;
   overflow: hidden;
 }
 
-#top-image img {
+.top-image img {
   position: absolute;
   right: 0;
   bottom: 0;
